Window Managers/XMonad/xmonad.errors

xmonad.hs:120:20: error:
    Not in scope: data constructor ‘NonNegative’
    |
120 | prop_sendmsg_full (NonNegative k) =
    |                    ^^^^^^^^^^^
